fixed overflowing content in footer

--- a/assets/stylesheets/partials.css
+++ b/assets/stylesheets/partials.css
@@ -155,7 +155,7 @@
 }
 
 #main-footer {
-  height: 60px;
+  min-height: 60px;
   margin-top: -60px;
   border-top: 1px solid #570E0E;
   background-color: #570E0E;
